--- a/mapComponent/map.page.scss
+++ b/mapComponent/map.page.scss
@@ -2,3 +2,11 @@
     width: 100%;
     height: 91.8%;
 }
+.my-custom-control {
+    text-transform: uppercase !important;
+}
+
+.toolbarTest {
+    position:absolute;
+    bottom:50px;
+}
